--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="description">Description</string>
     <string name="unable_to_load">Unable to load URL</string>
     <string name="repositories">Repositories</string>
+    <string name="enter_name">Enter the name of the repository</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
+    <string name="enter_description">Enter Description</string>
+    <string name="enter_owner_name">Enter owner name</string>
+    <string name="enter_rep_warning">Please enter the repository name</string>
+    <string name="enter_owner_name_warning">Please enter the Owner name</string>
+    <string name="no_network">Check the internet connectivity</string>
 </resources>
